syntax = "proto3";

package CIM.Grpc;
option go_package = ".;cim";
option optimize_for = LITE_RUNTIME;

import "CIM.Login.proto";
import "Grpc.Def.proto";
import "CIM.Server.proto";

service Gate {
  // ping
  rpc Ping(CIM.Login.CIMHeartBeat) returns (CIM.Login.CIMHeartBeat) {}

  // 发消息
  rpc SendMsgData(CIM.Server.CIMInternalMsgData) returns (Empty) {}
  // 消息收到通知
  rpc AckMsgData(CIM.Server.CIMInternalMsgDataReadNotify) returns (Empty) {}

  // 停止接收消息
  rpc StopReceivePacket(Empty) returns (Empty) {}
}